# speakup

./: README.md  pyproject.toml
.github/workflows/: pages.yml
demo/: .gitignore  CLAUDE.md  README.md  build-guest.sh  build-wasm.sh
demo/.github/workflows/: deploy.yml
demo/guests/: Cargo.toml  rust-toolchain.toml
demo/guests/age/: Cargo.toml  README.md
demo/guests/age/src/: lib.rs
demo/guests/csv/: Cargo.toml
demo/guests/csv/src/: lib.rs
demo/guests/ecdsa/: Cargo.toml
demo/guests/ecdsa-core/: Cargo.toml
demo/guests/ecdsa-core/src/: lib.rs
demo/guests/ecdsa-core/tests/: gen.rs
demo/guests/ecdsa/src/: lib.rs
demo/guests/json/: Cargo.toml
demo/guests/json/src/: lib.rs
demo/guests/luhn/: Cargo.toml
demo/guests/luhn/src/: lib.rs
demo/guests/mean/: Cargo.toml
demo/guests/mean/src/: lib.rs
demo/guests/regex/: Cargo.toml
demo/guests/regex-core/: Cargo.toml
demo/guests/regex-core/src/: lib.rs
demo/guests/regex/src/: lib.rs
demo/guests/sha256/: Cargo.toml
demo/guests/sha256/src/: lib.rs
demo/guests/square/: Cargo.toml
demo/guests/square/src/: lib.rs
demo/guests/sudoku/: Cargo.toml
demo/guests/sudoku/src/: lib.rs
demo/guests/transcript/: Cargo.toml
demo/guests/transcript-core/: Cargo.toml
demo/guests/transcript-core/src/: encode.rs  json.rs  json_tests.rs  lib.rs  tests.rs
demo/guests/transcript/src/: lib.rs
demo/rust/: Cargo.toml  build.rs  rust-toolchain.toml
demo/rust/.cargo/: config.toml
demo/rust/src/: lib.rs  port_io.rs  regex_table.rs
demo/rust/tests/: browser.rs
demo/speakup-wasm/: Cargo.toml
demo/speakup-wasm/.cargo/: config.toml
demo/speakup-wasm/src/: lib.rs  port_io.rs  port_mux.rs
demo/speakup-wasm/tests/: browser.rs  tracing.rs
demo/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/web/src/: config.ts  control-pane.ts  copy.ts  dom.ts  editors.ts  examples.ts  guest-module.ts  guest-panel.ts  main.ts  notify.ts  party.worker.ts  remote-session.ts  remote.ts  run-button.ts  run-controller.ts  stats-view.ts  style.css  sudoku-form.ts  tab-icons.ts  tabs.ts  tooltip.ts  verifier-view.ts  vite-env.d.ts  vm-embed.ts  worker.ts  zkvm-embed-snippet.html  zkvm.ts
docs/: conf.py  demo.md  index.md  proof-system.md
docs/_static/: custom.css  dark-mode.js  profile-viewer.js
docs/_templates/: github.html  layout.html
docs/architecture/: private-trace.md
