# The guest programs that run on the zk-vm. Edit these, and the demo's
# build (rust/build.rs) recompiles them to wasm automatically.
[workspace]
resolver = "2"
members = [
    "sha256",
    "sudoku",
]

[workspace.dependencies]
mpz-vm-sys = { git = "https://github.com/privacy-ethereum/mpz", rev = "b0455d96f1a954fbdb07c3011a9aff31a2db95a5" }

# Small, branch-free wasm for the zk-vm.
[profile.release]
opt-level = 3
lto = true
panic = "abort"
