# The guest programs that run on the zk-vm. Edit these, and the demo's
# build (rust/build.rs) recompiles them to wasm automatically.
[workspace]
resolver = "2"
members = [
    "sha256",
    "sudoku",
]

[workspace.dependencies]
mpz-vm-sys = { git = "https://github.com/privacy-ethereum/mpz", rev = "5663fc5b21e51b03153adfa9473abd16777cc866" }

# Small, branch-free wasm for the zk-vm.
[profile.release]
opt-level = 3
lto = true
panic = "abort"
