# The guest programs that run on the zk-vm. Edit these, and the demo's
# build (rust/build.rs) recompiles them to wasm automatically.
[workspace]
resolver = "2"
members = [
    "sha256",
    "sudoku",
]

[workspace.dependencies]
mpz-vm-sys = { git = "https://github.com/privacy-ethereum/mpz", rev = "c1da5b42c373f8e6c7d6ef4a9b1b9239582ae6fa" }

# Small, branch-free wasm for the zk-vm.
[profile.release]
opt-level = 3
lto = true
panic = "abort"
