# The wasm-bindgen wrapper around the mpz zk-vm for the browser demo.
[package]
name = "zkvm-demo"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpz-core = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2" }
mpz-common = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2", features = ["test-utils"] }
mpz-ot = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2" }
mpz-vm-core = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2" }
mpz-vm-ir = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2" }
mpz-vm-zk = { git = "https://github.com/privacy-ethereum/mpz", branch = "v2" }
regex-automata = "0.4"
wat = "1"

futures = "0.3"
rand = "0.9"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["MessagePort", "MessageEvent", "MessageChannel"] }
# Pull in both getrandom generations in the mpz dep graph with their
# browser backends enabled.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
regex-dfa-core = { version = "0.0.0", path = "../guests/regex-core" }

[dev-dependencies]
futures = "0.3"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
