[package]
name = "ecdsa-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
# cdylib for the wasm artifact; rlib so `cargo test` can link a test harness.
crate-type = ["cdylib", "rlib"]

[dependencies]
mpz-vm-sys = { workspace = true }
# Without the `host` feature: only the branch-free verifier enters the VM.
ecdsa-core = { path = "../ecdsa-core" }

[dev-dependencies]
ecdsa-core = { path = "../ecdsa-core", features = ["host"] }
