# The pure DFA-table layout and branch-free matcher, shared by the regex
# guest (which wraps it with VM buffers and the VCI reveal) and the host
# bindings (which build tables and cross-check matches). Deliberately free
# of mpz-vm-sys: linking that into the host wasm would drag in unsatisfiable
# `vc.*` imports.
[package]
name = "regex-dfa-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
